Add per-event registration questions and comp codes
